# smarthouse_pi

./: README.md  auth.py  backend.py  gpio_wrapper.py  mock_gpio.py  smarthouse.service  users.json
app/: CMakeLists.txt
lib/: gpio_lib.c  gpio_lib.h
lib-gpio-1.0/: CMakeLists.txt
lib-gpio-1.0/include/: gpio.h
lib-gpio-1.0/src/: test_gpio.c
libcamera/: CMakeLists.txt  camera.c  camera.h
libdoor/: CMakeLists.txt  door.c  door.h
libgpio-1.0/: Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
libgpio-1.0/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2
libgpio-1.0/src/: Makefile.am  Makefile.in  gpio.c
libgpio-1.0/usr/lib/: libgpio.la  libgpio.so.0.0.0
liblight/: CMakeLists.txt  light.c  light.h
recipes_backup/meta-python/: README
recipes_backup/meta-python/conf/: layer.conf
recipes_backup/meta-python/recipes-tools/blinker/: python3-blinker_1.7.0.bb
recipes_backup/meta-python/recipes-tools/click/: python3-click_8.1.7.bb
recipes_backup/meta-python/recipes-tools/flaskcors/: python3-flask-cors_4.0.0.bb
recipes_backup/meta-python/recipes-tools/flaskcors/files/: CVE-2024-6221.patch
recipes_backup/meta-python/recipes-tools/itsdangerous/: python3-itsdangerous_2.1.2.bb
recipes_backup/meta-python/recipes-tools/jinja/: python3-jinja2_3.1.3.bb
recipes_backup/meta-python/recipes-tools/markupsafe/: markupsafe_3.0.2.bb
recipes_backup/meta-python/recipes-tools/werkzeug/: python3-werkzeug_3.1.3.bb
recipes_backup/meta-toolchain/: README
recipes_backup/meta-toolchain/conf/: layer.conf
recipes_backup/meta-toolchain/recipes-gpio/libgpio/: libgpio_1.0.bb
recipes_backup/meta-toolchain/recipes-py/app/: app_1.0.bb
recipes_backup/meta-webcam/conf/: layer.conf
recipes_backup/meta-webcam/recipes-multimedia/gd/: gd_2.3.3.bb
recipes_backup/rpi4/conf/: bblayers.conf  local.conf
static/: app.js  style.css
templates/: index.html  login.html  register.html
